Added dev dependency for nodemon.

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "OnlineVideo"
   ],
   "author": "Sushant Singh",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
