The commit adds a `.prettierignore` file to the project. The file contains the following patterns: - `/.vscode` - `/node_modules` - `./dist` - `*.env` - `.env` - `.env*`

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "Video",
@@ -15,6 +15,7 @@
   "author": "Sushant Singh",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "prettier": "^3.2.4"
   }
 }
